[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MetaArray"
version = "2.2.2"
description = "N-dimensional array with metadata such as axis titles, units, and column names."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Luke Campagnola", email = "luke.campagnola@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "h5df",
]

[project.optional-dependencies]
plotting = [
    "pyqtgraph>=0.11.0",
]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
    "black",
]

[project.urls]
Homepage = "https://github.com/outofculture/metaarray"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ['py37']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
